--- a/app/views/inventory/inventory.html
+++ b/app/views/inventory/inventory.html
@@ -106,7 +106,7 @@
       
           
       
-      <tab heading="MRN" select="getMRNdetails()" active="mrnTab">
+      <tab heading="MRN/IS" select="getMRNdetails()" active="mrnTab">
         <div class="pull-right btn-group">
          <a href="#/itemsale" class="btn btn-primary"><i class="icon-plus icon-white"></i>Item Sale</a>
           <a href="#/createmrn" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
