small changes in office payments,adjustments,itemsale files

--- a/app/views/organization/itemSale.html
+++ b/app/views/organization/itemSale.html
@@ -3,7 +3,7 @@
         <ul class="breadcrumb">
           <li><a href="#/organization">{{'link.admin.organisation' | translate}}</a> <span class="divider">/</span></li>
           <li><a href="#/offices">{{'label.manageoffices' | translate}}</a> <span class="divider">/</span></li>
-           <li><a href="#/viewoffice/{{officeId}}">{{office_name}}</a> <span class="divider">/</span></li>
+           <li><a href="#/viewoffice/{{officeId}}">{{officeName}}</a> <span class="divider">/</span></li>
           <li class="active">Item Sale</li>
         </ul>
       </div>
