--- a/app/views/organization/viewoffice.html
+++ b/app/views/organization/viewoffice.html
@@ -7,7 +7,7 @@
 	    </ul>
 	    <div ng-show="office.officeType=='Agent'" class="pull-right">
 	      <div class="btn-group">
-	          <a ng-show="PermissionService.showMenu('UPDATE_OFFICE')" href="#/editoffice/{{office.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
+	         <!--  <a ng-show="PermissionService.showMenu('UPDATE_OFFICE')" href="#/editoffice/{{office.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a> -->
 	          <a href="#/officeadjustments/{{office.id}}" class="btn btn-primary"><i class="icon-adjust icon-white"></i>Adjustment</a>
 	          <a href="#/officepayments/{{office.id}}" class="btn btn-primary"><i class="icon-usd icon-white"></i>Payment</a>
 	          <a href="#/itemsale/{{office.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Item Sale</a>
