--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -275,7 +275,7 @@
     </table>
 </div>
 	</tab>
-		<tab heading="Provisioning Details"  select="getAllProvisioningDetails()">
+		<tab heading="Provisioning Details"  select="getAllProvisioningDetails(orderData.orderNo)">
 	<div class="row-fluid ">
 	<table class="table">
         <thead>
