--- a/app/views/organization/viewoffice.html
+++ b/app/views/organization/viewoffice.html
@@ -5,7 +5,7 @@
 	        <li><a href="#/offices">{{'label.manageoffices' | translate}}</a> <span class="divider">/</span></li>
 	        <li class="active">{{office.name}}</li>
 	    </ul>
-	    <div ng-show="office.officeType=='Agent'" class="pull-right">
+	    <div  class="pull-right">
 	      <div class="btn-group">
 	         <!--  <a ng-show="PermissionService.showMenu('UPDATE_OFFICE')" href="#/editoffice/{{office.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a> -->
 	          <a href="#/officeadjustments/{{office.id}}" class="btn btn-primary"><i class="icon-adjust icon-white"></i>Adjustment</a>
