--- a/app/views/import/import.html
+++ b/app/views/import/import.html
@@ -1,7 +1,7 @@
 <div  ng-controller="ImportController">
 <div>
     <ul class="breadcrumb">
-        <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
+      <!--   <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li> -->
         <li class="active">{{'label.imports' | translate}}&nbsp;&nbsp;</li>
     </ul>
     <div class="pull-right">
