--- a/app/views/import/uploadfile.html
+++ b/app/views/import/uploadfile.html
@@ -29,6 +29,7 @@
 				<option value="Mrn">MRN</option>
 				<option value="Epg">EPG</option>
 				<option value="MediaAssets">Media Assets</option>
+					<option value="ItemSale">Item Sale</option>
               </select>
               &nbsp;&nbsp;&nbsp;
               <a ng-hide="formData.status =='-1'" ng-click="downloadFile(formData.status)"><i class=" icon-download-alt icon-white"></i> Download Sample File</a>
