upload file for move items

--- a/app/views/import/uploadfile.html
+++ b/app/views/import/uploadfile.html
@@ -27,6 +27,7 @@
                 <option value="Adjustments">Adjustments</option>
                 <option value="Payments">Payments</option>
 				<option value="Mrn">MRN</option>
+				<option value="Move Itemsale">Move Itemsale</option>
 				<option value="Epg">EPG</option>
 				<option value="MediaAssets">Media Assets</option>
               </select>
