--- a/app/views/inventory/movemrn.html
+++ b/app/views/inventory/movemrn.html
@@ -4,20 +4,37 @@
           <li class="active">{{'label.create.move.mrn' | translate}}</li>
         </ul>
  </div>
-      <form class="form-horizontal well" ng-controller="MoveMrnController" ng-submit="submit()">
+      <form class="form-horizontal well" ng-controller="MoveMrnController">
        <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
         <fieldset>
-          <legend>Mrn</legend>
+          <legend>Mrn/IS</legend>
 
 			<table>
 				<tr>
 					<td>
 						<table>
+						
 							<tr>
+								<td>
+								<div class="control-group">
+	            						<label class="control-label" for="mrnId">Type&nbsp;<span class="required">*</span></label>
+									<div class="controls">
+										<select ng-model="formData.type">
+										<option>sale</option>
+										<option>mrn</option>
+										</select>
+										
+									</div>
+								</div>
+								</td>
+							</tr>
+							
+							
+							<tr ng-show="formData.type=='mrn'">
 								<td>
 								<div class="control-group">
 	            						<label class="control-label" for="mrnId">{{'label.mrn.id' | translate }}&nbsp;<span class="required">*</span></label>
@@ -30,7 +47,22 @@
 								</div>
 								</td>
 							</tr>
-							<tr>
+							
+							<tr ng-show="formData.type=='sale'">
+								<td>
+								<div class="control-group">
+	            						<label class="control-label" for="itemId">ItemId&nbsp;<span class="required">*</span></label>
+									<div class="controls">
+										<select ng-model="formData.itemId"
+											ng-options="id.id as getBoth(id.id,id.itemDescription) for id in itemIds"
+											value="{{id.id}}" ng-change="getSerialNumbersForItems(formData.itemId)">
+										</select>&nbsp;&nbsp;&nbsp;<span ng-show="serialNumbers1.length < 1"><i class="icon-warning-sign"></i>Serial numbers are not associated with this Item Id.</span>
+									</div>
+								</div>
+								</td>
+							</tr>
+							
+							<tr ng-show="formData.type=='mrn'">
 								<td>
 								<div class="control-group">
 	            						<label class="control-label" for="serialNumber">{{'label.mrn.serialnumber' | translate }}&nbsp;<span class="required">*</span></label>
@@ -43,6 +75,21 @@
 								</div>
 								</td>
 							</tr>
+							
+							<tr ng-show="formData.type=='sale'">
+								<td>
+								<div class="control-group">
+	            						<label class="control-label" for="serialNumber">{{'label.mrn.serialnumber' | translate }}&nbsp;<span class="required">*</span></label>
+									<div class="controls">
+										<select ng-model="formData.serialNumber"
+											ng-options="serialNumber for serialNumber in serialNumbers1"
+											value="{{serial.serialNumber}}">
+										</select>
+									</div>
+								</div>
+								</td>
+							</tr>
+							
 						</table>
 					</td>
 				</tr>
@@ -50,9 +97,9 @@
 			
           <div class="offset3">
             <a href="#/inventory"><button id="cancel"  type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
-            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <button ng-show="formData.type=='mrn'" id="submit" ng-click="mrnSubmit()" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <button ng-show="formData.type=='sale'" id="submit" ng-click="saleSubmit()" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
           
         </fieldset>
       </form>
- 
