--- a/app/views/administration/userslist.html
+++ b/app/views/administration/userslist.html
@@ -1,7 +1,7 @@
 <div ng-controller="UserListController">
 <div>
  <ul class="breadcrumb">
-        <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
+       <!--  <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li> -->
           <li class="active">{{'link.admin.users' | translate}}</li>
 </ul> 
     <div class="pull-right">
