--- a/app/views/organization/redemption.html
+++ b/app/views/organization/redemption.html
@@ -22,7 +22,7 @@
 					<div class="control-group">
            			    <label class="control-label">Client Id&nbsp;:</label>
             			<div class="controls">
-             			   <input type="text" ng-model="clientId"/>
+             			   <input type="text" ng-model="formData.clientId"/>
            				</div>
          		 	</div>	
 				</td>
@@ -34,7 +34,7 @@
             			<div class="controls">
               			   <!--  <select ng-model="pinType"  ng-options="pinTypeData.value as pinTypeData.value for pinTypeData in pinTypeDatas">
               			   </select> -->
-              			    <input type="text" id="pinValue" ng-model="pinValue">
+              			    <input type="text" id="pinNumber" ng-model="formData.pinNumber">
             		     </div>
           			</div>
 				</td>
