--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -23,7 +23,7 @@
             <td>{{config.name}}</a></td>
             <td>{{config.enabled}}</td>
             <td></td>
-            <td>{{config.value}}</td>
+            <td style="width:125px;">{{config.value}}</td>
             <td><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.id,config.name)"><i class="icon-flag-alt"></i></button>
                 <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.id,config.name)"><i class="icon-remove"></i></button>
             </td>
