--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -3,10 +3,6 @@
         <li class="active">{{'label.globalconfigurations' | translate}}</li>
     </ul>
 </div>
-
-<div class="pull-right">
-        <a href="#/createsmtp" class="btn btn-primary"><i class="icon-plus icon-white"></i>Create SMTP</a>
-</div>
 <div class="row-fluid" ng-controller="GlobalConfigurationController">
     <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="{{'label.filterbyname' | translate}}">
     <table class="table">
@@ -14,22 +10,23 @@
         <tr class="graybg">
             <th>{{'label.form.name' | translate}}</th>
             <th>{{'label.enabled' | translate}}</th>
-            <th></th>
             <th>Value</th>
             <th></th>
+            <th></th>
+            <th></th>	
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="config in configs  | filter:filterText">
             <td>{{config.name}}</a></td>
             <td>{{config.enabled}}</td>
-            <td></td>
             <td>{{config.value}}</td>
             <td><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.id,config.name)"><i class="icon-flag-alt"></i></button>
                 <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.id,config.name)"><i class="icon-remove"></i></button>
             </td>
             <td></td>
-            <td ng-hide="config.name=='SMTP'"><a ng-click="edit(config.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
+            <td><a data-ng-hide="config.name == 'Is Paypal'" ng-click="edit(config.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a> 
+                <a data-ng-show="config.enabled && (config.name=='Is Paypal')" ng-click="editPaypal(config.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
         </tr>
         </tbody>
     </table>
@@ -60,6 +57,49 @@
          <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
    </div>
 
+</script> 
+<script type="text/ng-template" id="editPaypal.html">
+
+	   <div class="modal-header silver">
+          <h3 class="bolder">Edit Paypal</h3>
+        </div>
+	 <form name="editPaypalForm" novalidate="" class="form-horizontal well" ng-submit="submit()">
+        <div class="modal-body">
+			 <div class="error" ng-show="errorStatus || errorDetails">
+				<label>{{'label.contract.error' | translate}}</label>
+				<label ng-show="errorStatus">{{errorStatus}}</label>
+				<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	   		 </div>
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label">Enter Client Id<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="clientId" ng-model="formData.id" placeholder="enter Id here" required late-Validate/><br>
+                    <span  ng-show="editPaypalForm.clientId.$invalid">
+                    	<small class="error" ng-show="editPaypalForm.clientId.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label">Enter Secret Code<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input type="text" name="secretCode" ng-model="formData.code" placeholder="enter code here" required late-Validate/><br>
+					<span  ng-show="editPaypalForm.secretCode.$invalid">
+                    	<small class="error" ng-show="editPaypalForm.secretCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" type="submit" class="btn btn-primary" ng-disabled="(!editPaypalForm.$valid) || paypalFlag" >{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
 </script> 
     
     
