--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -3,6 +3,9 @@
         <li class="active">{{'label.globalconfigurations' | translate}}</li>
     </ul>
 </div>
+<div class="pull-right">
+        <a href="#/createsmtp" class="btn btn-primary"><i class="icon-plus icon-white"></i>Create SMTP</a>
+</div>
 <div class="row-fluid" ng-controller="GlobalConfigurationController">
     <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="{{'label.filterbyname' | translate}}">
     <table class="table">
