--- a/app/views/clients/adjustments.html
+++ b/app/views/clients/adjustments.html
@@ -124,7 +124,7 @@
 			<div class="control-group">
 	          	<label class="control-label">{{'label.notes' | translate}}</label>
 		        <div class="controls">
-		          <textarea ng-model="formData.Remarks"></textarea>
+		          <textarea ng-click="hideError()" ng-model="formData.Remarks"></textarea>
 		        </div>
 	        </div>
 	         
