--- a/app/views/organization/createvoucherpin.html
+++ b/app/views/organization/createvoucherpin.html
@@ -71,11 +71,11 @@
             					</div>
           						</div>
 								</td>
-							</tr>
+							</tr>	
 							<tr>
 								<td>
 									<div class="control-group">
-           					 		<label class="control-label" for="serialNo">{{ 'label.serialNo' | translate }}</label>
+           					 		<label class="control-label" for="serialNo">{{ 'label.serialNoLength' | translate }}</label>
             						<div class="controls">
               						<input type="text" id="serialNo" ng-model="formData.serialNo">
             						</div>
@@ -111,7 +111,7 @@
 			</table>
           <div class="offset3">
             <a href="#/voucherpins"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button  id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <button  id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button> 
           </div>
           
         </fieldset>
